--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ select {
 .bid {
 	background: #a0046c;
 	cursor: pointer;
+	margin-left: 360px;
 }
 .big-window {
 	width: 155px;
@@ -367,6 +368,8 @@ select {
 }
 
 
+
+
 @media screen and (max-width: 480px){
 
 	#first{
@@ -474,6 +477,13 @@ select {
 		flex-wrap: wrap;
 		width: 480px;
 	}
+	
+	.prof__sist > input {
+		width: 242px;
+	}
 
+	.bid {
+		margin: auto;
+	}
 	
 }
