--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,7 @@ select {
 	.window__props-size-hw {
 		margin-top: 0;
 		margin-left: 18px;
+		margin-bottom: 0;
 	}
 
 	.wind-type {
@@ -494,6 +495,14 @@ select {
 	
 	.prof__sist > input {
 		width: 242px;
+	}
+
+	.window__props-size-image{
+		margin-top: 26px;
+	}
+
+	.wsize{
+		width: 385px;
 	}
 
 	.bid {
